lennartdockerdeploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lennartdocker
spec:
  #type: ClusterIP, ExternalName, LoadBalancer, NodePort
  ports:
  - name: http
    port: 80
  selector:
    app: lennartdocker
