lennartdockerdeploy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lennartdocker
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "lennartdocker.ubk3s"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lennartdocker
            port:
              number: 80
  - host: "lennartdocker.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lennartdocker
            port:
              number: 80
  - host: "lennartdocker"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lennartdocker
            port:
              number: 80
